Get ststuses based on user role
